--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-go-lang",
   "version": "1.0.7",
-  "description": "A teeny tiny, somewhat opinionated, Yeoman generator for #golang projects.",
+  "description": "A teeny tiny, somewhat opinionated, generator for golang projects",
   "homepage": "https://github.com/axelspringer/generator-go-lang",
   "bugs": {
     "url": "https://github.com/axelspringer/generator-go-lang/issues"
