--- a/templates/_vscode/_settings.json
+++ b/templates/_vscode/_settings.json
@@ -1,4 +1,7 @@
 {
   "go.useLanguageServer": true,
-  "go.formatOnSave": true
+  "go.formatOnSave": true,
+  "files.exclude": {
+    "vendor/**/*": true
+  }
 }
