--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "go"
   ],
   "dependencies": {
+    "@expo/spawn-async": "^1.3.0",
     "chalk": "^2.2.0",
     "colors": "^1.1.2",
+    "ora": "^1.3.0",
     "rimraf": "^2.5.4",
     "yeoman-generator": "^2.0.0",
     "yosay": "^2.0.1"
@@ -43,8 +45,11 @@
     "babel-preset-node": "^5.1.1",
     "del": "^3.0.0",
     "eslint": "^4.6.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.4.0",
     "jest": "^21.0.2",
     "jest-cli": "^21.0.2",
+    "prettier": "^1.9.2",
     "yeoman-test": "^1.6.0"
   },
   "repository": {
