🤔 ~ adding slack integration

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": {
     "name": "Axel Springer SE",
-    "url": "http://http://www.axelspringer.de/"
+    "url": "ttp://www.axelspringer.de/"
   },
   "contributors": [
     {
