--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "bugs": {
     "url": "https://github.com/axelspringer/generator-go-lang/issues"
   },
+  "bin": {
+    "gocreate": "./bin/gocreate"
+  },
   "author": {
     "name": "Axel Springer SE",
     "url": "ttp://www.axelspringer.de/"
@@ -17,10 +20,9 @@
     }
   ],
   "files": [
-    "app",
+    "generators",
     "templates"
   ],
-  "main": "app/index",
   "keywords": [
     "yeoman-generator",
     "generator",
@@ -33,6 +35,7 @@
     "colors": "^1.1.2",
     "ora": "^1.3.0",
     "rimraf": "^2.5.4",
+    "yeoman-environment": "^2.0.5",
     "yeoman-generator": "^2.0.0",
     "yosay": "^2.0.1"
   },
@@ -58,10 +61,10 @@
   },
   "scripts": {
     "babel": "babel",
-    "build": "babel src -d app",
+    "build": "babel src -d generators",
     "ci": "npm run lint && npm run test",
     "lint": "eslint --fix src/**/*.js",
-    "watch": "babel --watch src -d app",
+    "watch": "babel --watch src -d generators",
     "prepublish": "npm run build",
     "test": "jest",
     "update": "git pull --recurse-submodules"
