--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-go-lang",
-  "version": "1.0.21",
+  "version": "1.1.0",
   "description": "A teeny tiny, somewhat opinionated, generator for golang projects",
   "homepage": "https://github.com/axelspringer/generator-go-lang",
   "bugs": {
@@ -34,7 +34,6 @@
     "chalk": "^2.2.0",
     "colors": "^1.1.2",
     "ora": "^1.3.0",
-    "rimraf": "^2.5.4",
     "yeoman-environment": "^2.0.5",
     "yeoman-generator": "^2.0.0",
     "yosay": "^2.0.1"
@@ -53,6 +52,7 @@
     "jest": "^21.0.2",
     "jest-cli": "^21.0.2",
     "prettier": "^1.9.2",
+    "rimraf": "^2.6.2",
     "yeoman-test": "^1.6.0"
   },
   "repository": {
@@ -62,6 +62,8 @@
   "scripts": {
     "babel": "babel",
     "build": "babel src -d generators",
+    "prebuild": "npm run clean:gen",
+    "clean:gen": "rimraf -- generators",
     "ci": "npm run lint && npm run test",
     "lint": "eslint --fix src/**/*.js",
     "watch": "babel --watch src -d generators",
